--- a/Hello/Views/Home/Index.cshtml
+++ b/Hello/Views/Home/Index.cshtml
@@ -2,24 +2,35 @@
     ViewData["Title"] = "Home Page";
 }
 
-@section Layouts {
-    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
-}
-
 <div class='main-container'>
-    <div class='main-header'>
-        header
+    <div class='main-header' style='display: flex; justify-content: space-between; padding: .5em;'>
+        <div style='display: flex;'>
+            <div style='padding-right: 1em;'>
+                検索用：
+                <input id='search-word' type='text' />
+                <button id='exec-search' type='button'>検索実行</button>
+            </div>
+            <button id='add-book' type='button'>書籍の追加</button>
+        </div>
+        <div>
+            <button id='env-init' type='button'>環境の初期化</button>
+        </div>
     </div>
-    <div class='main-body'>
-        <div class='inner-body left-body'>
-            left
-        </div>
-        <div class='inner-body center-body'>
-            center
-        </div>
-        <div class='inner-body right-body'>
-            right
-        </div>
+    <div class='main-body' style='padding-top: 10px;'>
+        <table class='table'>
+            <thead>
+                <tr>
+                    <th>
+                        タイトル
+                    </th>
+                    <th>
+                        説明
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
 </div>
 
@@ -27,7 +38,7 @@
     <script src="~/js/home.js" asp-append-version="true"></script>
     <script>
         $(function(){
-            var instance = new Books($(".center-body"));
+            var instance = new Books($(".main-container"));
             instance.render();
         });
     </script>
