--- a/Hello/Views/Home/Index.cshtml
+++ b/Hello/Views/Home/Index.cshtml
@@ -10,7 +10,47 @@
                 <input id='search-word' type='text' />
                 <button id='exec-search' type='button'>検索実行</button>
             </div>
-            <button id='add-book' type='button'>書籍の追加</button>
+            <button type="button" data-toggle="modal" data-target="#modal">
+                書籍の追加
+            </button>
+            <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">書籍の追加</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="input-group input-group-lg">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">タイトル</span>
+                                </div>
+                                <input id="add-book-name" type="text" class="form-control">
+                            </div>
+                            <br>
+                            <div class="input-group input-group-lg">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">説明</span>
+                                </div>
+                                <input id="add-book-description" type="text" class="form-control">
+                            </div>
+                            <br>
+                            <div class="input-group input-group-lg">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">分類</span>
+                                </div>
+                                <input id="add-book-category" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+                            <button type="button" id="exec-add-book" class="btn btn-primary">追加</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div>
             <button id='env-init' type='button'>環境の初期化</button>
@@ -22,6 +62,9 @@
                 <tr>
                     <th>
                         タイトル
+                    </th>
+                    <th>
+                        カテゴリ
                     </th>
                     <th>
                         説明
